# llm-answer-watcher

./: .gitignore  404.html  BROWSER_RUNNER_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  CONTRIBUTING.md  COST_UPDATES.md  DEMO.md  DOCUMENTATION_STATUS.md  LICENSE  MIGRATION_FUNCTION_CALLING.md  PLAN_POLISHING.md  README.md  SPECS.md  TEST_RESULTS.md  TODO.md  demo-clean.sh  demo.cast  demo.config.yaml  index.html  index.md  llms-full.txt  llms.txt  mkdocs.yml  pyproject.toml  requirements.txt  ruff.toml  sitemap.xml  test_config.yaml
.claude/: AGENTS.md  HOOKS.md  HOOKS_QUICKREF.md  hooks.json  settings.local.json
BROWSER_RUNNERS/: index.html
NEW_MODEL_COMPATIBILITY/: index.html
changelog/: index.html  index.md
config/: pricing_overrides.json
docs/: BROWSER_RUNNERS.md  DEMO_RECORDING.md  NEW_MODEL_COMPATIBILITY.md  changelog.md  faq.md  index.md
examples/: .env.example  README.md  default.config.yaml  openai_client_example.py  steel-content-strategy-README.md  steel-dev-2.config.yaml  steel-dev-content-strategy.config.yaml  steel-dev-fast.config.yaml  steel-dev-rebalanced.config.yaml  steel-dev.config.yaml  test-openai-only.yaml  test-web-search-required.config.yaml  watcher-gemini-grounding.config.yaml  watcher-with-web-search.config.yaml  watcher.config.browser-runners.yaml  watcher.config.with-budgets.yaml  watcher.config.with-operations.yaml  watcher.config.yaml
faq/: index.html  index.md
llm_answer_watcher/: __main__.py  cli.py  exceptions.py
scripts/: record-demo.sh
search/: search_index.json
tests/: test_budget_enforcement.py  test_cli.py  test_cli_integration.py  test_config_capabilities.py  test_config_loader.py  test_config_runner_support.py  test_e2e_runner_workflow.py  test_eval_metrics.py  test_eval_runner.py  test_evals_integration.py  test_extractor_mention_detector.py  test_extractor_parser.py  test_extractor_rank_extractor.py  test_integration_browser_runners.py  test_llm_runner_anthropic_client.py  test_llm_runner_budget.py  test_llm_runner_chaos_client.py  test_llm_runner_gemini_client.py  test_llm_runner_grok_client.py  test_llm_runner_mistral_client.py  test_llm_runner_mock_client.py  test_llm_runner_models.py  test_llm_runner_openai_client.py  test_llm_runner_perplexity_client.py  test_llm_runner_retry_config.py  test_llm_runner_runner.py  test_time.py  (+13 more)
(+308 files in other folders)
